--- a/tguilloryiii.github.io/index.html
+++ b/tguilloryiii.github.io/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: rgb(33,33,33);">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
 
 </head>
 
-<body style="background-color: rgb(33,33,33);">
+<body>
     <header>
         <div class="sidebar">
             <div id="circle">
